--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,28 @@
 /* styles go here */
+.form {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+}
+
+.form__first {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.first {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.form__field {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: inline;
+}
+
+.field {
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+}
